# Homework_27_PD12

./: README.md  manage.py  pyproject.toml
Homework_27_PD12/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  views.py
ads/data/: import_csv.py
ads/migrations/: 0001_initial.py
